--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "sectors-edge-tournament",
   "version": "1.0.0",
   "description": "",
-  "main": "build.js",
   "scripts": {
-    "start": "node build watch",
-    "build": "node build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "build": "static-site-generator",
+    "dev": "static-site-generator dev"
   },
   "repository": {
     "type": "git",
@@ -19,10 +16,7 @@
     "url": "https://github.com/The-Noah/sectors-edge-tournament/issues"
   },
   "homepage": "https://the-noah.github.io/sectors-edge-tournament/",
-  "devDependencies": {
-    "ejs": "^3.0.2",
-    "gh-pages": "^2.2.0",
-    "html-minifier": "^4.0.0",
-    "node-sass": "^4.13.1"
+  "dependencies": {
+    "@the-noah/static-site-generator": "^1.3.2"
   }
 }
