--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "static-site-generator",
-    "dev": "static-site-generator dev"
+    "start": "static-site-generator dev",
+    "build": "static-site-generator"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,6 @@
   },
   "homepage": "https://the-noah.github.io/sectors-edge-tournament/",
   "dependencies": {
-    "@the-noah/static-site-generator": "^1.3.2"
+    "@the-noah/static-site-generator": "^1.3.3"
   }
 }
